--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1266 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.4;
+}
+
+.container {
+  padding: 2rem 3rem;
+}
+
+.z-1 {
+  font-size: 5.5rem;
+  text-align: center;
+}
+
+.z-2 {
+  font-size: 3.5rem;
+  text-align: center;
+}
+
+.z-3 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+/* Welcome */
+#home {
+  height: 100vh;
+}
+
+#navbar {
+  width: 100%;
+  position: fixed;
+  display: flex;
+  padding: 1rem;
+  background: #000;
+  opacity: 0.9;
+  z-index: 1000;
+}
+
+#navbar .space {
+  width: 100%;
+}
+
+#navbar ul {
+  width: 100%;
+  margin-left: 2rem;
+  display: flex;
+}
+
+#navbar ul li {
+  padding-right: 2rem;
+  margin: 0 auto;
+}
+
+#navbar ul li a {
+  font-size: 1.5rem;
+  color: #eee;
+  transition: all 0.3s ease-in;
+}
+
+#navbar ul li a:hover {
+  color: #497d95;
+}
+
+.content-container {
+  height: 100%;
+  background: url('assets/background.jpg') no-repeat center center/cover;
+}
+
+.content-container .content {
+  position: relative;
+  top: 15%;
+  color: #eee;
+  text-align: center;
+  z-index: 100;
+}
+
+.content-container .z-1 {
+  margin-bottom: 2rem;
+}
+
+.buttons-container {
+  width: 100%;
+  position: absolute;
+  top: 70vh;
+  text-align: center;
+}
+
+.buttons-container a {
+  font-size: 1.5rem;
+  padding: 1rem 1.5rem;
+  margin: 0 2rem;
+}
+
+.btn {
+  border-radius: 10px;
+}
+
+.btn-primary {
+  color: #eee;
+  background: #497d95;
+}
+
+.btn-secondary {
+  color: #000;
+  background: #eee;
+}
+
+/* About */
+#about {
+  height: 100vh;
+  padding-top: 3rem;
+  color: #eee;
+  background: url('assets/bg_dark.png');
+}
+
+.info-content {
+  margin: 4rem auto;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1.5fr 5fr;
+}
+
+.about-img {
+  max-width: 350px;
+  border-radius: 20px;
+  margin: 0 auto;
+  box-shadow: 1px 1px 10px #497d95;
+  align-items: center;
+}
+
+.about-content {
+  position: relative;
+  font-size: 1.5rem;
+  margin: 0 2rem;
+}
+
+.about-content h1 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.about-content .icon-container {
+  text-align: center;
+}
+
+.about-content a {
+  padding: 0.5rem;
+  font-size: 2.5rem;
+  color: #497d95;
+}
+
+.about-content p {
+  margin: 0 1rem;
+}
+
+.about-content .btn-project {
+  color: #497d95;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 5rem;
+}
+
+.about-content .btn-project a {
+  font-size: 1.2rem;
+}
+
+/* Skills */
+#skills {
+  height: 100vh;
+  padding-top: 3rem;
+  color: #eee;
+  background: url('assets/bg_dark.png');
+}
+
+.info-skills {
+  height: 450px;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+}
+.info-skills .pointer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-right: 1px solid #eee;
+  box-shadow: 10px 0 11px -10px #497d95;
+}
+
+.info-skills .pointer .skill-item {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 1rem 0 1rem 1rem;
+}
+
+.info-skills .pointer .skill-item div {
+  text-align: right;
+}
+
+.info-skills .pointer .icons {
+  font-size: 2.5rem;
+}
+.info-skills .pointer span {
+  margin-left: 1rem;
+  font-size: 1.5rem;
+}
+
+.skill-details {
+  width: 80%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 1rem;
+}
+
+/* Knew */
+.info-knew .progress-container {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.info-knew h4 {
+  text-align: start;
+  width: 18rem;
+  font-size: 1.5rem;
+}
+
+.info-knew .progress {
+  background: #eee;
+  margin-left: 1rem;
+  width: 100%;
+  height: 20px;
+  border-radius: 6px;
+}
+
+.info-knew .progress div {
+  border-radius: 6px 0 0 6px;
+  height: 100%;
+  background: #f69e12;
+}
+
+/* Learning */
+
+.info-learning .li-point {
+  display: flex;
+  align-items: center;
+}
+
+.info-learning li {
+  padding: 0.5rem;
+}
+
+.info-learning .li-point h2 {
+  margin-left: 1rem;
+  font-size: 1.75rem;
+}
+
+.info-learning .li-point .icons {
+  font-size: 1.75rem;
+  color: #f69e19;
+  margin: 0 1rem 0 0.5rem;
+}
+
+.info-learning p {
+  margin-left: 4.5rem;
+  font-size: 1.1rem;
+}
+
+/* Projects */
+#projects {
+  height: 100vh;
+  padding-top: 3rem;
+  color: #eee;
+  background: url('assets/bg_dark.png');
+}
+
+.swiper {
+  margin-top: 1rem;
+  width: 100%;
+  height: 600px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 1.5rem;
+  background: url('assets/bg_dark.png');
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: end;
+}
+
+.project-content {
+  background: rgba(0, 0, 0, 0.7);
+  width: 800px;
+}
+
+.project-content h2 {
+  font-size: 1.75rem;
+}
+
+.project-content p {
+  font-size: 1.25rem;
+}
+
+.project-1 {
+  background: url('./assets//project_1.png') no-repeat center center;
+}
+
+.project-2 {
+  background: url('./assets//project_2.png') no-repeat center center;
+}
+
+.project-3 {
+  background: url('./assets//project_3.png') no-repeat center center;
+}
+
+.project-details {
+  color: #f69e12;
+  padding: 0.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s ease-in-out;
+}
+
+.project-details a {
+  color: #f69e12;
+  margin-left: 5px;
+  font-size: 1.25rem;
+}
+
+.project-details:hover {
+  opacity: 0.6;
+}
+
+.project-details .icons {
+  font-size: 1.25rem;
+}
+
+/* Contact */
+#contact {
+  height: 100vh;
+  padding-top: 3rem;
+  color: #eee;
+  background: url('assets/bg_dark.png');
+}
+
+#contact .contact-container {
+  margin-top: 1.5rem;
+  height: 650px;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-container .contact-img {
+  background: url('assets/contact-bg.jpg') no-repeat center center/cover;
+  width: 600px;
+  height: 600px;
+}
+
+.form-container {
+  display: flex;
+  background-color: #eee;
+  width: 600px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-container h1 {
+  margin-left: 1rem;
+  color: #000;
+}
+
+.form-container .form-item {
+  padding: 0 1.5rem 0.75rem 1.5rem;
+}
+
+.form-container .form-item input {
+  font-size: 20px;
+  width: 500px;
+  height: 40px;
+  border: none;
+  box-shadow: 1px 1px 5px #333;
+  border-radius: 4px;
+}
+
+.form-container .form-item .btn {
+  color: #eee;
+  background-color: #f69e12;
+}
+
+.form-container .form-item textarea {
+  font-size: 20px;
+  width: 500px;
+  height: 200px;
+  box-shadow: 1px 1px 5px #333;
+  border-radius: 4px;
+}
+
+.form-container .form-item textarea:focus,
+.form-container .form-item input:focus {
+  outline-style: none;
+}
+
+.form-container .form-item label {
+  font-size: 1.2rem;
+  color: #f69e12;
+  display: block;
+  text-align: left;
+}
+
+.form-container .form-item p {
+  color: red;
+}
+
+/* Tablet */
+@media (max-width: 1030px) {
+  .about-content .btn-project {
+    margin-top: 1rem;
+  }
+  #contact {
+    height: 115vh;
+    padding-top: 3rem;
+    color: #eee;
+    background: url('assets/bg_dark.png');
+  }
+  /* Projects */
+  #projects {
+    padding-top: 1.5rem;
+  }
+
+  /* Learning */
+  .info-learning .li-point h2 {
+    font-size: 1.3rem;
+  }
+
+  .info-learning p {
+    font-size: 1rem;
+  }
+
+  /* Contact */
+  #contact {
+    padding-top: 1.5rem;
+  }
+}
+
+@media (max-width: 920px) {
+  .z-1 {
+    font-size: 5rem;
+  }
+
+  .z-2 {
+    font-size: 3rem;
+  }
+
+  .z-3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+  /* Welcome */
+  #home {
+    height: 70vh;
+  }
+
+  #navbar ul li a {
+    font-size: 2rem;
+  }
+
+  .content-container .z-1 {
+    margin-bottom: 2rem;
+  }
+
+  .buttons-container {
+    top: 50vh;
+  }
+
+  /* About */
+  #about {
+    height: 70vh;
+    padding-top: 0rem;
+  }
+
+  #about .container {
+    padding-top: 5rem;
+  }
+
+  .info-content {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-content {
+    font-size: 1.4rem;
+    margin: 0 1rem;
+  }
+
+  .about-content a {
+    font-size: 2rem;
+  }
+
+  .about-content p {
+    margin: 0 1rem;
+  }
+
+  .about-content .btn-project {
+    margin-top: 1rem;
+  }
+
+  /* Skills */
+  #skills {
+    height: 70vh;
+  }
+
+  .info-skills {
+    margin-top: 2rem;
+    height: 100px;
+    display: block;
+  }
+  .info-skills .pointer {
+    margin-bottom: 2rem;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    border-right: none;
+    border-bottom: 1px solid #eee;
+    box-shadow: none;
+  }
+
+  .info-skills .pointer .skill-item {
+    align-items: center;
+  }
+
+  .skill-details {
+    width: 100%;
+    margin-left: 0.5rem;
+  }
+
+  /* Projects */
+  #projects {
+    height: 70vh;
+  }
+
+  /* Contact */
+  #contact {
+    height: 70vh;
+  }
+
+  #contact .contact-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .contact-container .contact-img {
+    display: none;
+  }
+}
+
+@media (max-width: 821px) {
+  /* Welcome */
+  #home {
+    height: 90vh;
+  }
+
+  .buttons-container {
+    top: 55vh;
+  }
+
+  /* About */
+  #about {
+    height: 100vh;
+  }
+
+  #about .container {
+    padding-top: 2rem;
+  }
+
+  .info-content {
+    margin: 1rem 0;
+    display: block;
+  }
+
+  .info-content .about-img {
+    position: absolute;
+    top: 480px;
+    left: 161px;
+  }
+
+  /* Skills */
+  #skills {
+    padding-top: 8rem;
+    height: 100vh;
+  }
+
+  /* Projects */
+  #projects {
+    padding-top: 8rem;
+    height: 100vh;
+  }
+
+  /* Contact */
+  #contact {
+    padding-top: 8rem;
+    height: 100vh;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    padding: 1rem 1.5rem;
+  }
+
+  .z-1 {
+    font-size: 3rem;
+  }
+
+  .z-2 {
+    font-size: 2.5rem;
+  }
+
+  .z-3 {
+    font-size: 1.75rem;
+  }
+
+  /* Welcome */
+  #home {
+    height: 100vh;
+  }
+
+  #navbar {
+    padding: 1rem 0;
+  }
+
+  #navbar ul {
+    margin-left: 2rem;
+  }
+
+  #navbar ul li {
+    padding-right: 1rem;
+  }
+
+  #navbar ul li a {
+    font-size: 1.2rem;
+  }
+
+  .buttons-container {
+    top: 60vh;
+  }
+
+  .buttons-container a {
+    font-size: 1rem;
+  }
+
+  /* About */
+  #about {
+    padding-top: 1rem;
+  }
+
+  #about .container {
+    padding-top: 1rem;
+  }
+
+  .info-content .about-img {
+    content: url('./assets/about_alt.jpg');
+    top: 500px;
+    left: 146px;
+    height: 150px;
+  }
+
+  .icon-container a {
+    font-size: 1.75rem;
+  }
+  .about-content p {
+    font-size: 1.25rem;
+    text-align: center;
+  }
+
+  /* Skills */
+  #skills {
+    padding-top: 2rem;
+  }
+
+  .info-skills {
+    margin-top: 1rem;
+  }
+
+  .info-skills .pointer {
+    margin-bottom: 1rem;
+  }
+
+  .info-skills .pointer .skill-item {
+    align-items: center;
+  }
+
+  .info-skills .pointer .skill-item .icons {
+    font-size: 1.5rem;
+  }
+  .info-skills .pointer .skill-item span {
+    font-size: 1rem;
+  }
+
+  .info-learning .li-point h2 {
+    font-size: 1.5rem;
+  }
+
+  /* Projects */
+  #projects {
+    padding-top: 1.75rem;
+  }
+
+  /* Contact */
+  #contact {
+    height: 100vh;
+    padding-top: 1.75rem;
+  }
+
+  #contact .contact-container {
+    height: 500px;
+    align-items: flex-start;
+  }
+
+  .form-container {
+    width: 450px;
+    height: 500px;
+  }
+
+  .form-container form {
+    width: 100%;
+  }
+  .form-container form h1 {
+    font-size: 1.75rem;
+  }
+
+  .form-container .form-item input {
+    font-size: 15px;
+    width: 100%;
+    height: 30px;
+    border: none;
+    box-shadow: 1px 1px 5px #333;
+    border-radius: 4px;
+  }
+
+  .form-container .form-item textarea {
+    font-size: 15px;
+    width: 100%;
+    height: 150px;
+  }
+}
+
+@media (max-width: 420px) {
+  .info-content .about-img {
+    top: 650px;
+    left: 65px;
+    height: 175px;
+  }
+
+  .project-content h2 {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+  }
+  .project-content p {
+    font-size: 1rem;
+  }
+
+  /* Skills */
+  #skills {
+    height: 70vh;
+    padding-top: 3rem;
+  }
+  /* Knew */
+
+  .info-knew h4 {
+    width: 12rem;
+    font-size: 1rem;
+  }
+
+  .info-knew .progress {
+    height: 15px;
+    border-radius: 4px;
+  }
+
+  /* Learning */
+
+  .info-learning .li-point {
+    display: flex;
+    align-items: center;
+  }
+
+  .info-learning li {
+    padding: 0.5rem;
+  }
+
+  .info-learning .li-point h2 {
+    margin-left: 0.5rem;
+    font-size: 1rem;
+  }
+
+  .info-learning .li-point .icons {
+    font-size: 1.2rem;
+  }
+
+  .info-learning p {
+    font-size: 0.9rem;
+  }
+
+  /* Projects */
+  #projects {
+    padding-top: 3rem;
+  }
+
+  /* Contact */
+  #contact {
+    height: 90vh;
+    padding-top: 1.75rem;
+  }
+}
+
+@media (max-width: 376px) {
+  .z-1 {
+    font-size: 2.5rem;
+  }
+
+  .z-2 {
+    font-size: 1.75rem;
+  }
+
+  .z-3 {
+    font-size: 1.2rem;
+  }
+
+  /* Welcome */
+
+  #navbar {
+    padding: 1rem 0;
+  }
+
+  #navbar ul {
+    margin-left: 0.75rem;
+  }
+
+  #navbar ul li {
+    padding-right: 1rem;
+  }
+
+  #navbar ul li a {
+    font-size: 1rem;
+  }
+
+  .buttons-container a {
+    font-size: 0.75rem;
+  }
+
+  /* About */
+  #about {
+    padding-top: 1rem;
+  }
+
+  .info-content .about-img {
+    content: url('./assets/about_alt.jpg');
+    top: 480px;
+    left: 84px;
+    height: 120px;
+  }
+
+  .icon-container a {
+    font-size: 1.25rem;
+  }
+  .about-content p {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .btn-project {
+    font-size: 1rem;
+  }
+
+  .about-content .btn-project a {
+    font-size: 1rem;
+  }
+
+  /* Skills */
+  #skills {
+    height: 100vh;
+  }
+
+  .info-skills .pointer {
+    margin-bottom: 1rem;
+  }
+
+  .info-skills .pointer .skill-item .icons {
+    font-size: 1.25rem;
+  }
+  .info-skills .pointer .skill-item span {
+    font-size: 0.75rem;
+  }
+
+  /* Projects */
+
+  #projects {
+    height: 110vh;
+  }
+
+  .project-details a {
+    font-size: 1rem;
+  }
+
+  .project-details .icons {
+    font-size: 1rem;
+  }
+  /* Contact */
+  #contact {
+    height: 100vh;
+  }
+}
+
+@media (max-height: 600px) {
+  .z-1 {
+    font-size: 3.5rem;
+  }
+
+  .z-2 {
+    font-size: 2.5rem;
+  }
+
+  .z-3 {
+    font-size: 2rem;
+  }
+
+  /* About */
+  #about {
+    height: 110vh;
+    padding-top: 1rem;
+  }
+
+  .about-content .btn-project {
+    margin-top: 1rem;
+  }
+
+  /* Learning */
+
+  .info-learning li {
+    padding: 0.5rem;
+  }
+
+  .info-learning .li-point h2 {
+    font-size: 1.25rem;
+  }
+
+  .info-learning .li-point .icons {
+    font-size: 1.5rem;
+    margin: 0 0.5rem 0 0.5rem;
+  }
+
+  .info-learning p {
+    margin-left: 3.5rem;
+    font-size: 1rem;
+  }
+
+  /* Projects */
+  #projects {
+    height: 110vh;
+    padding-top: 1rem;
+  }
+
+  /* Contact */
+  #contact {
+    height: 145vh;
+    padding-top: 4rem;
+    color: #eee;
+    background: url('assets/bg_dark.png');
+  }
+}
+
+@media (max-height: 550px) {
+  .z-1 {
+    font-size: 3rem;
+  }
+  .z-2 {
+    font-size: 2rem;
+  }
+
+  /* Welcome */
+  #home {
+    height: 100vh;
+  }
+
+  #navbar ul li a {
+    font-size: 1.25rem;
+  }
+
+  .content-container .z-1 {
+    margin-bottom: 2rem;
+  }
+
+  .buttons-container {
+    top: 75vh;
+  }
+
+  /* About */
+  #about {
+    height: 100vh;
+    padding-top: 0;
+  }
+
+  .info-content {
+    margin: 2rem auto;
+  }
+
+  .info-content .about-img {
+    content: url('./assets/about_alt.jpg');
+    top: 320px;
+    left: 190px;
+    height: 180px;
+  }
+
+  .about-content {
+    position: relative;
+    font-size: 1.5rem;
+    margin: 0 2rem;
+  }
+
+  .about-content h1 {
+    font-size: 2rem;
+  }
+
+  .about-content .icon-container {
+    text-align: center;
+  }
+
+  .about-content a {
+    font-size: 1.5rem;
+  }
+
+  .about-content p {
+    font-size: 1rem;
+  }
+
+  .about-content .btn-project {
+    margin-top: 1rem;
+    font-size: 1rem;
+  }
+
+  .about-content .btn-project a {
+    font-size: 1rem;
+  }
+
+  /* Skills */
+  #skills {
+    padding-top: 1.5rem;
+  }
+
+  .info-skills {
+    margin-top: 1rem;
+    height: 450px;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+  }
+  .info-skills .pointer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-right: 1px solid #eee;
+    border-bottom: none;
+    box-shadow: 10px 0 11px -10px #497d95;
+  }
+
+  .info-skills .pointer .skill-item {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 1rem 0 1rem 1rem;
+  }
+
+  .info-skills .pointer .skill-item div {
+    text-align: right;
+  }
+
+  .info-skills .pointer .icons {
+    font-size: 2rem;
+  }
+  .info-skills .pointer span {
+    margin-left: 1rem;
+    font-size: 1.2rem;
+  }
+
+  /* Knew */
+
+  .info-knew h4 {
+    font-size: 1.2rem;
+  }
+
+  /* Learning */
+
+  .info-learning li {
+    padding: 0.5rem;
+  }
+
+  .info-learning .li-point h2 {
+    font-size: 1.25rem;
+  }
+
+  .info-learning .li-point .icons {
+    font-size: 1.2rem;
+  }
+
+  .info-learning p {
+    margin-left: 3.5rem;
+    font-size: 0.75rem;
+  }
+
+  /* Projects */
+  #projects {
+    height: 130vh;
+    padding-top: 2rem;
+  }
+
+  /* Contact */
+  #contact {
+    height: 160vh;
+  }
+}
+
+@media (max-height: 420px) {
+  .container {
+    padding: 2rem 3rem;
+  }
+
+  .z-1 {
+    font-size: 2.5rem;
+  }
+
+  .z-2 {
+    font-size: 2rem;
+  }
+
+  .z-3 {
+    font-size: 1.75rem;
+  }
+
+  /* Welcome */
+  #home {
+    height: 100vh;
+  }
+
+  #navbar ul li a {
+    font-size: 1rem;
+  }
+
+  .content-container .content {
+    top: 20%;
+  }
+
+  .content-container .z-1 {
+    margin-bottom: 1rem;
+  }
+
+  .buttons-container {
+    top: 88vh;
+  }
+
+  .buttons-container a {
+    font-size: 0.75rem;
+    padding: 0.5rem 1rem;
+  }
+
+  .btn {
+    border-radius: 7px;
+  }
+
+  /* About */
+  #about {
+    height: 130vh;
+    padding-top: 0;
+  }
+
+  .info-content {
+    margin: 1rem auto;
+  }
+
+  .info-content .about-img {
+    content: url('./assets/about_alt.jpg');
+    top: 320px;
+    left: 185px;
+    height: 150px;
+  }
+
+  .about-content h1 {
+    font-size: 2rem;
+  }
+
+  .about-content a {
+    font-size: 1.5rem;
+  }
+
+  .about-content p {
+    font-size: 1rem;
+  }
+
+  .about-content .btn-project {
+    margin-top: 0;
+  }
+
+  /* Skills */
+  #skills {
+    height: 150vh;
+    padding-top: 2rem;
+  }
+
+  /* Projects */
+  #projects {
+    height: 200vh;
+    padding-top: 2rem;
+  }
+
+  /* Contact */
+  #contact {
+    height: 250vh;
+  }
 }
